--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
+AUTH0_DOMAIN=null
+AUTH0_CLIENT_ID=null
+AUTH0_CLIENT_SECRET=null
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
