--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "db"
     expose:
       - "80"
+    working_dir: /var/www/html/
     entrypoint:
       - php 
       - /var/www/html/artisan
