Fix test error: ound unexpected records in database table [school_classes] that matched attributes [{"id":85}]

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.2.*",
         "auth0/login": "~3.0",
         "dingo/api": "1.0.x@dev",
-        "marcelgwerder/laravel-api-handler": "dev-master"
+        "marcelgwerder/laravel-api-handler": "dev-master",
+        "kirkbater/soft-deletes": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
