Resource lessons/per-day

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "auth0/login": "~3.0",
         "dingo/api": "1.0.x@dev",
         "marcelgwerder/laravel-api-handler": "dev-master",
-        "kirkbater/soft-deletes": "^1.0"
+        "kirkbater/soft-deletes": "^1.0",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
