fix build error: https://semaphoreci.com/keviocastro/schools/branches/master/builds/126

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   master:
-    environment: null
+    environment: gennin
     group_suffix: null
 global:
   application_name: schools
