--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,11 +1,14 @@
 branch-defaults:
   master:
-    environment: gennin
-    group_suffix: null
+    environment: schools-dev
+environment-defaults:
+  schools-dev:
+    branch: null
+    repository: null
 global:
   application_name: schools
   default_ec2_keyname: deployers
-  default_platform: Docker 1.11.1
+  default_platform: 64bit Amazon Linux 2016.03 v2.1.3 running Docker 1.11.1
   default_region: sa-east-1
   profile: null
   sc: git
