--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Homestead.json
 /.phpintel
 schools.sublime-workspace
 /docs
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
