--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "dingo/api": "1.0.x@dev",
         "marcelgwerder/laravel-api-handler": "dev-master",
         "kirkbater/soft-deletes": "^1.0",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "^0.8.2",
+        "danielstjules/stringy": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
