Calculo da média do aluno por disciplina no ano

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - db
     volumes:
       - ".:/var/app/"
+      - "~/.bash_history:/root/.bash_history"
     ports:
       - "80:80"
     links:
