--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: schools
+    volumes:
+      - "./docker/mysql:/etc/mysql/conf.d"
 
 
