--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 services:
   web:
-    image: keviocastro/laravel:5
+    build: .
+    environment:
+      XDEBUG_CONFIG: remote_host=192.168.0.19
     depends_on:
       - db
     volumes:
