--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 Homestead.yaml
 Homestead.json
 .env
-/.idea
 /.phpintel
 schools.sublime-workspace
+docker-compose.override.yml
 
 
 # Elastic Beanstalk Files
