--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=schools
+DB_DATABASE_TESTING=test_schools
 DB_USERNAME=root
 DB_PASSWORD=secret
 
