Atualização do recurso lesson-plans: Exclusão do atributos start_date e end_date porque serão definidos pela data das aulas relacionadas ao plano. Atualização na docuemntação: correção de erros de escritas e padronização para nomes dos arquivos em português e configuração para publicação da documentação do apiary.io.

--- a/docs/dredd.yml
+++ b/docs/dredd.yml
@@ -1,7 +1,7 @@
 reporter: apiary
 custom:
   apiaryApiKey: 6cabb663232a4ff4c4b5a5243fc96c82
-  apiaryApiName: schoolsap
+  apiaryApiName: schoolsapi
 dry-run: null
 hookfiles: null
 language: nodejs
@@ -32,5 +32,5 @@ hooks-worker-term-retry: 500
 hooks-worker-handler-host: localhost
 hooks-worker-handler-port: 61321
 config: ./dredd.yml
-blueprint: apiary.apib
+blueprint: api.apib
 endpoint: 'http://localhost/api'
