Alteração de parametro nos recursos POST/UPDATE lesson-plan: lessons_id para lesson_ids

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ phpunit.xml
 #IDE PHPSTORM
 .idea/*
 
+#IDE Visual studio code
+.vscode
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
