--- a/docs/dredd.yml
+++ b/docs/dredd.yml
@@ -32,5 +32,5 @@ hooks-worker-term-retry: 500
 hooks-worker-handler-host: localhost
 hooks-worker-handler-port: 61321
 config: ./dredd.yml
-blueprint: api.apib
-endpoint: 'http://localhost/api'
+blueprint: apiary.apib
+endpoint: 'http://localhost'
