Alteração de identificador da api no serviço de autentificação

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ API_PREFIX=api
 AUTH0_DOMAIN=logos.auth0.com
 AUTH0_CLIENT_ID=bEt9JrlJoIs0bRSzvWMwtCAJkQGTggng
 AUTH0_CLIENT_SECRET=bSk9pBkQz2FHyLNXSL5WVjT9QuHroPNTnuWgHKwuhbnzuqjbaUsddX5_Q14Acgnx
-AUTH0_API_IDENTIFIER=http://apis.logoseducacao.com.br/schools
+AUTH0_API_IDENTIFIER=api.schools
 AUTH0_REDIRECT_URI=http://logos.auth0.com/auth0/callback
 AUTH0_AUTHORIZED_ISSUERS=https://logos.auth0.com/
 
