Recurso /progress-sheet/{progress_sheet_id}/items

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - db
     volumes:
       - ".:/var/app/"
+      - "~/.bash_history:/root/.bash_history"
     ports:
       - "80:80"
     links:
