Corrigindo ID do usuário teste-professor-1

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ AUTH0_TOKEN_USER_TESTER=eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6Ik0wRkdOelEz
 
 
 # \ para escapar caracteres especiais
-AUTH0_USER_ID_ROLE_TEACHER_1=google-oauth2|108420548475043609428
+AUTH0_USER_ID_ROLE_TEACHER_1=google-oauth2\|108420548475043609428
 AUTH0_USER_ID_ROLE_TEACHER_2=auth0\|58e39a47c1002318c626735f
 AUTH0_USER_ID_ROLE_TEACHER_3=auth0\|58e39a5cc1002318c6267369
 AUTH0_USER_ID_ROLE_TEACHER_4=auth0\|58e39a6eafec3158a325b534
