--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "auth0/login": "~3.0",
         "dingo/api": "1.0.x@dev",
         "marcelgwerder/laravel-api-handler": "dev-master",
         "barryvdh/laravel-cors": "^0.8.2",
         "danielstjules/stringy": "~2.3",
         "rtconner/laravel-tagging": "~2.2",
-        "doctrine/dbal": "^2.6@dev"
+        "doctrine/dbal": "^2.6@dev",
+        "spatie/laravel-responsecache": "^3.1",
+        "predis/predis": "^1.1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
