Habilitado xdebug profile
Ferramenta para analise de performance dos scripts php.
Inserindo o parametro ?XDEBUG_PROFILE=1 um relatório será gerado no diretorio ./storage/xdebug que pode ser visualizado com https://kcachegrind.github.io/.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ".:/var/app/"
       - "~/.bash_history:/root/.bash_history"
+      - "./storage/logs/xdebug/:/var/log/xdebug/"
     ports:
       - "80:80"
     links:
