--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,11 @@ DB_DATABASE_TESTING=test_schools
 DB_USERNAME=root
 DB_PASSWORD=secret
 
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=redis
+SESSION_DRIVER=redis
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
