--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "80:80"
     links:
       - "db"
+      - "redis"
   db:
     image: mysql:5.7
     ports:
@@ -23,3 +24,5 @@ services:
       MYSQL_DATABASE: schools
     volumes:
       - "./docker/mysql:/etc/mysql/conf.d"
+  redis:
+    image: redis:3
