--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "barryvdh/laravel-cors": "^0.8.2",
         "danielstjules/stringy": "~2.3",
         "rtconner/laravel-tagging": "~2.2",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "predis/predis": "^1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
