--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,12 @@
 machine:
   services:
     - docker
+  pre:
+    - sudo -i
+    - apt-get autoremove docker-compose
+    - rm -rf /usr/local/bin/docker-compose
+    - curl -L https://github.com/docker/compose/releases/download/1.8.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+    - chmod +x /usr/local/bin/docker-compose
 
 dependencies:
   override:
