--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
   services:
     - docker
   pre:
+    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
     - curl -L https://github.com/docker/compose/releases/download/1.14.0/docker-compose-`uname -s`-`uname -m` > docker-compose 
     - sudo mv docker-compose /usr/local/bin/docker-compose
     - sudo chmod +x /usr/local/bin/docker-compose
