Fix command in cicleci build

--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ machine:
 dependencies:
   override:
     - composer install
-    - docker-compose up -d
+    - docker-compose -f docker-compose.prod.yml -d
 
 test:
   override:
