--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ machine:
 dependencies:
   override:
     - composer install
-    - docker-compose -f docker-compose.prod.yml -d
+    - docker-compose -f docker-compose.prod.yml up -d
 
 test:
   override:
