--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "minimum-stability": "dev",
@@ -16,7 +19,8 @@
         "rtconner/laravel-tagging": "~2.2",
         "doctrine/dbal": "~2.5",
         "predis/predis": "~1.1",
-        "spatie/laravel-responsecache": "~3.1"
+        "spatie/laravel-responsecache": "~3.1",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -43,7 +47,9 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+            "php -r \"copy('.env.example', '.env');\"",
+            "chmod -R 755 bootstrap\/cache",
+            "php artisan cache:clear"
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
